tests/architecture/fixtures/invalid/ownership-boundaries/shared-owner-policy.ts
export interface CommerceOrder { total: number }
